little refinements to ch1,2, part of 3

--- a/chap1.tex
+++ b/chap1.tex
@@ -313,7 +313,7 @@ system, the expansion of management roles and the further division of
 labor, is not about automation but about new and altered
 types of human work: industry continued
 the removal of strategic decision-making from the
-workers most physically engaged in product production, installing it
+workers most physically engaged in production, installing it
 instead within formal organizational structures and the managers that
 constituted them. 
 
@@ -431,7 +431,7 @@ Gates, speaking at the American Enterprise Institute,
 suggested that a large portion of the workforce will find itself
 displaced by robots in the next 20 years, including accountants and
 other white-collar
-jobs \cite{gatesRobots}.\footnote{Gate's suggested remedies (low-to-no taxes and decreasing minimum
+jobs \cite{gatesRobots}.\footnote{Unfortunately, Gate's suggested remedies (low-to-no taxes and decreasing minimum
 wages) are painfully biased toward corporate profits.}
 His comments play directly into
 contemporary fears about automation, and support only the
@@ -603,7 +603,8 @@ sensing and acting with corrective feedback.\footnote{This began in
  terms of feedback mechanisms: all systems that pass and respond to
  messages internally are within its explanatory sphere \cite[p.
    10-15]{wienerMainIdeas}.\footnote{Homeostasis, balance, and motion
- disorders like locomotor ataxia and Parkinsons all are cited by Wiener.}
+ disorders like locomotor ataxia and Parkinsons all are cited by
+ Wiener as within the cybernetic realm.}
  AI is interested in re-creating many of the same
  self-regulating systems within computers---and claims a
  similarly broad explanatory role, whether the goal is playing chess,
@@ -657,7 +658,7 @@ constructs are \emph{symbol systems} in that they contain symbols and processes
 that act upon symbols. And they are \emph{physical} in that they obey
 physical laws and are realizable through engineering. They operate via
 heuristic search, pruning a tree of possibilities in a hopefully
-``intelligent'' way \cite[p. 124]{newellsimon}.} A symbolic
+``intelligent'' way \cite[p. 124]{newellsimon}.} But a symbolic AI
 approach rooted in the physical symbol-systems hypothesis did not
 yield results as quickly as expected.\footnote{It did produce
   expert systems useful in particular domains, but there is good
@@ -1021,7 +1022,7 @@ Training the
 neural network involves adjusting the connections' weights so as to
 be more sensitive in distinguishing different types of
 inputs. This tuning,
-traditionally, has been done using supervised method and
+traditionally, has been done using supervised methods and
 backpropagation of errors: the output result is compared to an
 expected classification result (determined by humans), and the error used to tune the weights
 more appropriately.\footnote{These techniques are actually used in the
@@ -1059,15 +1060,15 @@ Popular claims
 about the utopic promise of deep learning, to
 learn about the world ``on its own,''
 abound. Google's and Stanford's recent
-improvements in image recognition, driven by deep learning,
-\cite{markoffImage} triggered a wave 
+improvements in image recognition, driven by deep learning
+\cite{markoffImage}, triggered a wave 
 of popular speculation about computer vision meeting or surpassing
 that of humans. Such
 advances might seem to translate automatically into the self-driving
 car space. Though some articles note that current
 state-of-the-art image recognition is still considerably less capable
 than people are, many articles still present the uncritical idea that we have solved
-the image-recognition problem---or rather, that increases in computing
+the image ``understanding'' problem---or rather, that increases in computing
 power mean it will necessarily soon be solved. By this narrative, seemingly limitless
 possibilities are open before us: a new universal problem-solver, like
 feedback control before it, seems to have broadened the frontiers
@@ -1110,15 +1111,17 @@ and its definition is not constant over time. Weaving was once considered to be 
 peculiarly human capability, a sign of an advanced, intelligent
 mind \cite[p. 627]{riskinDuck}, but after Vaucanson's loom allowed mechanical devices to weave
 seemingly on their own, this capacity was no longer seen as uniquely
-human, and was no longer a marker of intelligence. The same process
+human and was no longer a marker of intelligence. The same process
 occurred with chess in the 1990s: when IBM's Deep Blue beat Gary
 Kasparov, chess ceased to be the standard by which intelligence could
 be judged, precisely because it had been achieved. Real intelligence
 had to lie elsewhere: for example, in the game Go, mastery of which
-has continued to elude machines.\footnote{``When IBM's Deep Blue beat
-  Gary Kasparov in 1997, most Artificial Intelligence researchers and
-  commentators decided that chess playing did not require intelligence
-  after all and declared a new standard, the ability to play Go'' \cite[p. 623]{riskinDuck}.}
+has continued to elude machines \cite[p. 623]{riskinDuck}.
+
+%% \footnote{``When IBM's Deep Blue beat
+%%   Gary Kasparov in 1997, most Artificial Intelligence researchers and
+%%   commentators decided that chess playing did not require intelligence
+%%   after all and declared a new standard, the ability to play Go'' \cite[p. 623]{riskinDuck}.}
 
 Nevertheless, machines manage to do things that \emph{seem}
 intelligent. Our heuristics for understanding the observed 
@@ -1146,7 +1149,7 @@ association sufficient for knowledge?
 %% Think} actually are.
 
 H. R. Ekbia and others remind us that we should be skeptical of the
-applications of these terms to computational processes \cite{ekbia}.
+applications of cognitive terms to computational processes \cite{ekbia}.
 Ornstein, Smith, and Suchman, in their 1984 
 article ``Strategic Computing,'' warn of the difference between domain
 capabilities and ``common sense,'' and suggest that ``unwarranted
@@ -1189,7 +1192,8 @@ intelligence outweighs the actual technological substance behind them.
 %% ``natural-language'' interface, makes it appear more eerily
 %% science-fictional than it actually is.
 
-We would do well to remember that 
+Artificial intelligence has a powerful public narrative of self-evident
+progress. We would do well to remember that  
 progress in AI has been slow, contingent, and heterogeneous, a product of a
 wide variety of concepts and techniques. Logical, precise models,
 reactive-subsumptive control, and probabilistic re-framings of the
@@ -1199,11 +1203,13 @@ spawn numerous real-world systems, from personal assistants to
 self-driving test vehicles. However, the limits of each new paradigm are rarely
 obvious \emph{a priori}, and it remains to be seen how far current
 algorithms can carry the field, and whether subsequent algorithmic
-advances will allow progress to continue unabated. This is the
-environment that autonomous cars, as a 
-research area of artificial intelligence, find themselves in today:
-part of a new surge of interest in the field, driven by new
-or newly extended techniques. But no one has yet found Winston's
+advances will allow progress to continue unabated. Autonomous cars, as a 
+research area of artificial intelligence, find themselves in an
+environment of surging hopes and interest in the field, driven by new
+or newly extended techniques. This climate may aid the
+naturalization of the 
+idea that fully-automated vehicles in the AI/robotic mode are
+inevitable, or even coming soon. But no one has yet found Winston's 
 philosopher's stone.
 
 
@@ -1242,7 +1248,7 @@ task of flying a large airliner in poor conditions \cite{AF447}.
 %cite removed
 %airflow required electronic solutions\cite[p. 33]{DM}
 
- But this concern with cockpit automation is not
+ But these concerns with cockpit automation are not
 new, and pilots and aircraft designers have been negotiating human
 roles in flying machines since the very early days of aviation. The
 tension between stable and unstable aircraft design---will the
@@ -1336,7 +1342,7 @@ gets leveraged in the popular narrative as a source for
 takes a leaf out of NASA's design book to cope with such
 eventualities. `It doesn't have a fallback to human---it has redundant
 systems,' said Fairfield. `It has two steering motors, and we have
-various ways we can bring it to a stop.''' \cite{simonite}. This is a
+various ways we can bring it to a stop''' \cite{simonite}. This is a
 reductive view even of NASA's unmanned space
 systems, let alone manned systems with which the Google vehicles must share
 the critical characteristic of containing human occupants.
@@ -1397,7 +1403,7 @@ cumbersome'' in missile terms \cite[p. 66-67]{DM}.} Von Braun
 was not alone in his cautions to
 test pilots about the limits of their capacities: Richard Horner
 warned that technology would progress
-faster than human beings: the ``link'' that improves the least ``is
+faster than human beings: the ``link'' that improves the least over time ``is
 the man himself'' \cite[p. 19]{DM}. 
 
 %% Not only was their
@@ -1598,13 +1604,14 @@ The Apollo program started too soon to learn lessons from
 Gemini---the designs were largely complete by the time Gemini
 missions flew---but arguments about human roles also shaped this
 parallel program. Due to requirements of weight, space, and
-reliability\footnote{Serious
+reliability,\footnote{Serious
 research was being done in the 1950s on simple automated probes to do a fly-by of
 Mars \cite[p. 1]{battin}. But self-contained navigation capability was
 largely removed from Apollo due to memory restrictions
 \cite{tindallMay12}.} the human beings were placed at
 the nexus of 
-many devices, including a digital computer and manual controls. Human beings were
+many devices, including a digital computer and manual controls.
+Supported by ground controllers, astronauts were 
 again counted on for sextant readings, for initiating appropriate
 program modes and monitoring automation systems \cite[p.
   4]{BennettExperience}. The LM's approach
@@ -1617,7 +1624,7 @@ is produced by an automatic guidance system'' \cite[p.
   129--130]{Klumpp}. These 
 historical examples are about neither heroic pilots nor
 automated spacecraft, but a successful combination of the capabilities
-of both via large-scale networks of people and organizations.
+of both, aided by large-scale networks of people and organizations.
 
 %% Klumpp's self-described ``hybrid'' system accounts
 %% for the ``obvious desire of any man to control his craft'' while
@@ -1775,7 +1782,7 @@ The rovers (MER) are not
 sent out to wander or find goals by themselves. They drive mostly
 blind, with only their immediate obstacle detection, following manual
 waypoints entered by human navigators on Earth: their autonomous
-path-finding systems are much slower, and use more power, and are
+path-finding systems are much slower and use more power, and are
 therefore generally avoided \cite[p. 118]{clancey}. While the rovers
 are out of contact for the span of two weeks during solar
 conjunctions, the instruments lie dormant and the rovers sit
@@ -1961,15 +1968,15 @@ highly computerized Nissan GT-R, with a plethora of all-wheel-drive
 systems---are criticized by some as ``too easy to drive quickly'' \cite{edmunds}.
 An overly computerized vehicle is to some soulless, unexciting, too much like
 a video game: these vehicles may derisively be said to be for the
-PlayStation generation, even while others argue for the superior
-abilities that advanced technologies convey upon human
-drivers,\footnote{This position stumbles upon a sort of hybrid
+``PlayStation generation,'' even while others argue for the superior
+abilities that advanced technologies convey upon humans,\footnote{This
+  position stumbles upon a sort of hybrid 
   identity: the  human gains through
 interaction with the technology.}
 turning an average driver into a hero or track-star. These gains and
 losses are not all easily quantifiable: while accident rates or track
 times are easy to measure, subjective judgments involving drivers'
-identities are not, and may be similarly important.
+identities are not, and may be similarly important in adoption and use.
 
 % can cite http://www.ctvnews.ca/autos/nissan-s-new-gt-r-model-for-2014-is-this-a-supercar-for-the-playstation-generation-1.1550159
 
@@ -1988,7 +1995,7 @@ This historical journey has attempted
 to shed light on some of the unspoken assumptions behind autonomous
 vehicles that shape the popular narrative toward
 particular visions of automation and away from others. From factory
-automation, through AI and robotics, and applied automation in
+automation, through AI and robotics, to applied automation in
 multiple types of vehicles, we have seen that history does not support
 an assumed trend toward ever increasing automation and complete
 replacement of the human being. Instead, automation is partial,
