--- a/chap2.tex
+++ b/chap2.tex
@@ -48,7 +48,7 @@ engineers,\footnote{In fact I think it would be exceedingly rare to
   influenced by Jules Verne, and some even wrote science fiction
   themselves \cite[p. 2]{marketingMoon}.} they serve as design
 studies for the possible shapes of technology, and they act as
-playgrounds to investigate their cultural impacts.
+playgrounds to investigate potential cultural impacts.
 Though created in different contexts, with potentially 
 different levels of scholarly care, these two types of fiction are not
 neatly delineated, and are unified as sources of insight into what
@@ -137,7 +137,8 @@ these sorts of pictures are endemic to discussions of artificial
 intelligence in the press, and are often mobilized specifically to
 illustrate the possible forms of automated vehicles. Stories and ideas
 about what autonomous cars will be are
-influenced by \emph{Minority Report} \cite{fromHollywood}, \emph{KITT}
+influenced by \emph{Minority Report} \cite{fromHollywood},
+\emph{Knight Rider}
 \cite{wadeKITT}, and \emph{Total
   Recall} \cite{pasdirtzSolution}. Countless articles begin by describing
 self-driving vehicles as a Hollywood or science-fiction
@@ -277,7 +278,7 @@ chapter? Some of this has to do with their manner of
 presentation, lent the gravitas of ``science'' by emanating from
 scientists rather than from the
 illusionary powers of Hollywood.} To examine the
-ways in which our design fictions may fail us, I will
+ways in which our conventional design fictions may fail us, I will
 take as assumed the general form of the autonomous vehicle as present
 in Google's development work. I seek to take this concept
 to its logical conclusion and interrogate the social,
