little edits added up through chapter 3

--- a/chap2.tex
+++ b/chap2.tex
@@ -424,9 +424,9 @@ city planning \cite{uberJardin}. Though this data is ostensibly being
 shared for the public good,\footnote{One potential reason for municipalities to
   collect such data is dynamic road pricing. This is not fundamentally
 a bad idea if done in a way that is as non-discriminatory as possible,
-But putting another
+but putting another
 corporate entity in between road users and the road is not necessarily
-a good idea. It strikes me, since I am writing this shortly after the
+ good. It strikes me, since I am writing this shortly after the
 FCC's reclassification of Internet service under common carriage laws,
 that if we find ourselves in a battle over ``road neutrality'' in a
 decade or two, it will have a decided air of irony to it. Pervasive
@@ -437,7 +437,7 @@ not be far-fetched, in the current
 information landscape, to see such information sold to third-party advertisers.
 
 Prevailing data ideology tells us that we can understand ourselves better through
-collected data, finding meaningful patterns in it. Out of this
+collected data, finding meaningful information within it. Out of this
 ideology come publications like Uber's 
 blog\footnote{See blog.uber.com. One particularly noteworthy post,
   from March of 2012, was about customers' ``Rides of Glory''---in
@@ -587,7 +587,7 @@ vehicles, which drive a route and collect data that can be used to
 reconstruct the model used for future drives.\footnote{Nhai Cao
   (Global Product Line Manager at TomTom), presentation at The Road
   Ahead Forum on Future Cities 2014, Cambridge, MA, MIT, November 21,
-  2014.} And like map applications on smartphones and computers,
+  2014.} And just as for map applications on smartphones and computers,
 those maps would need to be downloaded to the automated car before or
 during a trip, via a wireless data connection.
 
@@ -645,12 +645,12 @@ Mountain View, California may be mapped early, rural West Virginia or
 Northern Maine may not be mapped as soon or as
 frequently.\footnote{And it is worth noting that 60 percent of road
   fatalities occur on rural roads, and that the rate of fatalities per
-mile is twice that as for urban roads \cite[p. 11]{broviakCars}.}
+mile on rural roads is twice that for urban roads \cite[p. 11]{broviakCars}.}
 Inequalities may be increased if routes frequented by upper-middle
 class professionals likely to own new autonomous cars
 are mapped first, while roads around low-income communities are
 ignored. Such decisions are easy to imagine being justified by
-market forces but would
+market forces, but would
 cut directly against the utopian narratives of driverless cars.
 
 Furthermore, the seemingly universalizing forces of maps tend to hide
@@ -767,7 +767,7 @@ time the system has to react), decreases image
 contrast, and presents interference from drops or
 streaks on the glass
 \cite{rainADAS}.\footnote{These issues also 
-affect people (though we can filter out raindrops on the
+affect people (though we are good at filtering out raindrops on the
 windshield rather than interpreting them as obstacles), and raindrop
 detection to help advanced driver-assistance systems compensate for
 reduced visibility is a current research area.} 
@@ -864,11 +864,11 @@ Detected categories allow the system to make
 statistical predictions about likely types of behavior based on
 assumptions about those categories
 \cite{predictPatent}. These sorts of predictions are 
-something that human drivers do consistently, and are therefore
+something that human drivers do constantly, and are therefore
 likely to be important for autonomous vehicles.\footnote{The
   DARPA Urban Challenge crash, the first crash between two autonomous
   cars, provides an important lesson on the vagaries of object
-  detection: the classification threshold between moving and
+  detection and prediction: the classification threshold between moving and
   stationary, set too high, allowed one vehicle to interpret the other
   as stationary, leaving no room for unexpected behavior \cite{collisionPaper}.}
 Categories alone, even if achieved, are also insufficient if detected
@@ -914,10 +914,11 @@ by autonomous vehicles are compatible with the visual technologies of
 media representation, new types of seeing are opened to us.
 
 \begin{figure}[h]
+  \begin{center}
+  \includegraphics{pedestriandetection}
+  \end{center}
   \caption{A simulated pedestrian detection image, showing the
     detected figures outlines by yellow boxes. Photo by Marjan Lazarevski  \cite{pedestrianimage}.}
-  \centering
-  \includegraphics{pedestriandetection2}
 \end{figure}
 
 %%Kelly Joyce on fMRI: Magnetic Appeal: MRI and the Myth of
@@ -954,7 +955,7 @@ misleading in vehicle navigation as it is in neuroscience.\footnote{In
 her book \emph{Magnetic Appeal}, Joyce argues that ``seeing does not
 equal truth or unmediated access to the human body,'' but that
 practices equating these are so common that images are often used to
-stand for truth despite the doctors' awareness of how social practices
+stand for truth despite doctors' awareness of how social practices
 shape this evidence
 \cite[p. 76]{kellyMagnetic}. Popular narratives are particularly prone
 to fall
@@ -1008,9 +1009,9 @@ robots envisioned by current AI
 ventures bear little resemblance to those of Asimov or the dreams that grew
 from the Dartmouth Conference.\footnote{Chauffeur and Deep Mind, the
   Google divisions responsible for cars and general-purpose AI, are
-geographically and organizationally separated. A Google Deep Mind
-employee I spoke to at MIT said that they had had only very limited
-contact with the Chauffeur team. September 10, 2014.}  Those working
+geographically and organizationally separated. A Google
+employee I spoke to at MIT said that Deep Mind had only very limited
+contact with the Chauffeur team, as of late 2014.}  Those working
 in the field are well aware of 
 the difficulties of general-purpose AI \cite{sofgeAIFears}, so much
 current work is 
@@ -1053,7 +1054,7 @@ specific applications. One would likely not want one's self-driving car
 to be preoccupied or emotional. Much of the
 discussion around why autonomous vehicles are necessary centers on
 just such qualities: distractability, sleepiness, lapses in
-concentration.\footnote{A vast proportion of articles make a claim
+concentration.\footnote{A large proportion of articles make a claim
   like this. For example: ``They don't get sleepy or
   distracted, they don't have blind spots, and there is nothing on
   their `minds' except getting safely from point A to point B'' \cite{merrill}.} We
@@ -1074,8 +1075,8 @@ elm trees are), about death being a very undesirable thing \cite[p.
 
 This is a difficult knowledge and perception problem. But even more,
 it is an issue of selfhood, embodiment, even sentience. While cats,
-children and bumpers can be identified as objects, and children
-chasing balls into the streets can be identified as patterns, a
+children, and bumpers can be identified as objects, and children
+chasing balls into the street can be identified as a pattern, a
 computer programmed to respond to these stimuli may respond correctly
 without ``knowing'' anything. While a machine can be programmed to avoid
 running into people, can it have any understanding of death? Can it be
@@ -1196,7 +1197,7 @@ the stakes of developing autonomous machines.
 When we
 speak of robotic cars ``making decisions'' of what to do in a crisis
 situation, we implicitly accept the idea that such decisions are
-really being made by the program. Discussing whether or not those
+really being made by programs. Discussing whether or not those
 behaviors are ethical risks suggesting that our robots have all the
 capabilities---of sensing, knowing, and processing---necessary to
 carry out, \emph{in toto}, what we consider to be ``ethics.'' But
@@ -1667,10 +1668,10 @@ roadway.
 
 These proposals involve numerous potential pitfalls. While coordinated
 fleets of vehicles could increase road throughput by 2 to 20
-times \cite[p. 229]{adamsBrewerRoadways}, significantly greater
+times by various estimates \cite[p. 229]{adamsBrewerRoadways}, the top end of those
 increases would be necessary to match the 
-throughputs of buses or subway trains, which can be 100 times
-greater \cite[p. 222]{loweCars}.\footnote{Adams and Brewer
+throughputs of buses or subway trains, which can be 10 times
+those of cars \cite[p. 222]{loweCars}.\footnote{Adams and Brewer
   estimate 10 solo drivers per square foot of right-of-way per
   hour for conventional highways, and between 100 and 200 for
   modified approaches that use normal subcompact vehicles and special
@@ -1863,8 +1864,9 @@ All of these questions are united by being largely unanswerable---and
 the problems, unsolvable---by a focus only on the device itself,
 narrowly defined. Instead, these are system-level problems, questions
 that must be asked of large networks of human and machine actors with
-subtle and shifting interrelationships. While some issues will
-persist, alternative models of 
+subtle and shifting interrelationships. Prevailing notions about AI do
+not easily allow space for this perspective, but while issues will
+persist, alternative paradigms of 
 automation present the possibility to soften some of the more
-troubling questions of machine capabilities. 
+troubling questions of machine capabilities and human-machine relationships. 
 
