one little change

--- a/chap2.tex
+++ b/chap2.tex
@@ -1678,7 +1678,10 @@ those of cars \cite[p. 222]{loweCars}.\footnote{Adams and Brewer
   bubble-like micro-cars, respectively. Lowe describes
   per-hour capacity for 
   a rail line as high as 70,000 people, compared with 30,000 for buses
-and just 8,000 for private cars.} Much depends on actual usage.
+and just 8,000 for private cars.} Capacity estimates that assume 4
+people per car would require  
+significant changes in ride-sharing behavior to match in the real
+world. Much depends on actual usage.
 Utopian visions of increased capacity forget the complex dynamics of
 human behavior: city planning has found 
 time and time again over the last 50 years that increasing the
@@ -1691,7 +1694,8 @@ at least the one that's been proven, through research, is pricing, is
 through taxation.''} If a factor of 10
 increase in highway throughput were possible, but caused a factor of
 10 increase in overall miles driven, congestion would not be
-ameliorated, and significantly more environmental impact might result. Any
+ameliorated, and significantly more environmental impact might result.
+Any
 large-scale impacts of automated vehicles are dependent on the
 architecture of the overall transportation system. And therefore it is
 the transportation system, not automated vehicles alone, that must be remodeled.
@@ -1868,5 +1872,7 @@ subtle and shifting interrelationships. Prevailing notions about AI do
 not easily allow space for this perspective, but while issues will
 persist, alternative paradigms of 
 automation present the possibility to soften some of the more
-troubling questions of machine capabilities and human-machine relationships. 
+troubling questions of machine capabilities and human-machine
+relationships. 
+
 
